# zynqt

examples/: Arpeggioz1.xmz
src/: CMakeLists.txt  main.cpp
src/Misc/: CMakeLists.txt
src/NewUI/: CMakeLists.txt  addnoteui.C  addnoteui.h  addnoteui.ui  bankui.C  bankui.h  dial.cpp  dial.h  envelopebox.C  envelopebox.h  envelopebox.ui  lfobox.C  lfobox.h  lfobox.ui  mainwindow.cpp  mainwindow.h  masterUI.ui  masterui.C  masterui.h  unitbox.C  unitbox.h
src/Output/: CMakeLists.txt  DSSIaudiooutput.C  DSSIaudiooutput.h
